--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/myweb?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
 
+spring.jpa.database= mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.show-sql= true
+spring.jpa.open-in-view= false
+spring.jpa.hibernate.ddl-auto=create
+spring.data.jpa.repositories.enabled=true
+
+server.port=8080
