[feat] 자주하는 질문 Entity생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.jpa.show-sql= true
 spring.jpa.open-in-view= false
 spring.jpa.hibernate.ddl-auto=create
 spring.data.jpa.repositories.enabled=true
+spring.jpa.mapping-resources= META-INF/front-faq-sql.xml
 
 server.port=8080
