--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,18 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myweb?serverTimezone=UTC&chara
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.database= mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.show-sql= true
-spring.jpa.open-in-view= false
-spring.jpa.hibernate.ddl-auto=create
-spring.data.jpa.repositories.enabled=true
-spring.jpa.mapping-resources= META-INF/front-faq-sql.xml
+spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.suffix= .jsp
+
+#JSP??? ?? ????? ?? ??? ? ?? ??
+server.servlet.jsp.init-parameters.development=true
+
+#spring.jpa.database= mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.show-sql= true
+#spring.jpa.open-in-view= false
+#spring.jpa.hibernate.ddl-auto=create
+#spring.data.jpa.repositories.enabled=true
+#spring.jpa.mapping-resources= META-INF/front-faq-sql.xml
 
 server.port=8080
